@@ -1,3 +1,6 @@
+2014-05-05 Tsi YANG <tsi.yang@plan-net.fr>
+	* Feature: Added merging locallang.
+
 2013-05-21 Tsi YANG <tsi.yang@plan-net.fr>
 	* Feature: Improved in RSS configuration.
 
